--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -243,11 +243,11 @@
 </tr>
 <tr>
 <td align="left">Jan  9</td>
-<td align="left"><strong>Security Foundations</strong> <br/> Reading: Thompson's <a href="../papers/thompson.pdf">Reflections on Trusting Trust</a>, <a href="https://www.cl.cam.ac.uk/~rja14/Papers/SEv2-c01.pdf">Ch 1</a>, and <a href="https://www.cl.cam.ac.uk/~rja14/Papers/SEv2-c04.pdf">Ch 4.1-4.2</a></td>
+<td align="left"><a href="../slides/lecture2.pdf"><strong>Security Foundations</strong></a> <br/> Reading: Thompson's <a href="../papers/thompson.pdf">Reflections on Trusting Trust</a>, <a href="https://www.cl.cam.ac.uk/~rja14/Papers/SEv2-c01.pdf">Ch 1</a>, and <a href="https://www.cl.cam.ac.uk/~rja14/Papers/SEv2-c04.pdf">Ch 4.1-4.2</a></td>
 </tr>
 <tr>
 <td align="left">Jan 14</td>
-<td align="left"></td>
+<td align="left">discussion</td>
 </tr>
 <tr>
 <td align="left">Jan 16</td>
