--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -247,7 +247,7 @@
 </tr>
 <tr>
 <td align="left">Jan 14</td>
-<td align="left">discussion</td>
+<td align="left">In-class discussion</td>
 </tr>
 <tr>
 <td align="left">Jan 16</td>
