--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -247,11 +247,11 @@
 </tr>
 <tr>
 <td align="left">Jan 14</td>
-<td align="left">In-class discussion</td>
+<td align="left"><strong>Security Foundations (in-class discussion)</strong></td>
 </tr>
 <tr>
 <td align="left">Jan 16</td>
-<td align="left"></td>
+<td align="left"><strong>Low-level Software Security I: Buffer Overflows</strong> <br/> Reading: Aleph One's <a href="http://phrack.org/issues/49/14.html#article">Smashing the Stack for Fun and Profit</a> <br/> Optional reading: 0x300-0x320 from Hacking. 0x200-0x270 if you don't have a strong C background.</td>
 </tr>
 <tr>
 <td align="left">Jan 21</td>
