--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -247,7 +247,7 @@
 </tr>
 <tr>
 <td align="left">Jan 14</td>
-<td align="left"><strong>Security Foundations (in-class discussion)</strong></td>
+<td align="left"><a href="../slides/lecture3.pdf"><strong>Security Foundations (in-class discussion)</strong></a> <a href="https://cseweb.ucsd.edu/classes/fa17/cse127-b/lec2.pdf">Kirill's slides</a></td>
 </tr>
 <tr>
 <td align="left">Jan 16</td>
