--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -287,7 +287,7 @@
 </tr>
 <tr>
 <td align="left">Jan 16</td>
-<td align="left"><a href="../slides/lecture4.pdf"><strong>Low-level Software Security I: Buffer Overflows</strong></a> <br/> Reading: Aleph One's <a href="http://phrack.org/issues/49/14.html#article">Smashing the Stack for Fun and Profit</a> <br/> Optional reading: 0x300-0x320 from Hacking. 0x200-0x270 if you don't have a strong C background.</td>
+<td align="left"><a href="../slides/lecture4.pdf"><strong>Low-level Software Security I</strong></a> <br/> Reading: Aleph One's <a href="http://phrack.org/issues/49/14.html#article">Smashing the Stack for Fun and Profit</a> <br/> Optional reading: 0x300-0x320 from Hacking. 0x200-0x270 if you don't have a strong C background.</td>
 </tr>
 <tr>
 <td align="left">Jan 21</td>
@@ -295,7 +295,7 @@
 </tr>
 <tr>
 <td align="left">Jan 23</td>
-<td align="left"></td>
+<td align="left"><strong>Low-level Software Security II</strong> <br/> Reading: <a href="../papers/eternal-war-in-memory.pdf">Eternal War in Memory</a> by Szekeres et al., <a href="https://pax.grsecurity.net/docs/aslr.txt">ASLR</a>, and <a href="https://pax.grsecurity.net/docs/noexec.txt">NOEXEC</a></td>
 </tr>
 <tr>
 <td align="left">Jan 28</td>
@@ -319,7 +319,7 @@
 </tr>
 <tr>
 <td align="left">Feb 13</td>
-<td align="left"></td>
+<td align="left"><strong>Midterm exam (in-class)</strong></td>
 </tr>
 <tr>
 <td align="left">Feb 18</td>
