--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -295,7 +295,7 @@
 </tr>
 <tr>
 <td align="left">Jan 23</td>
-<td align="left"><strong>Low-level Software Security II</strong> <br/> Reading: <a href="../papers/eternal-war-in-memory.pdf">Eternal War in Memory</a> by Szekeres et al., <a href="https://pax.grsecurity.net/docs/aslr.txt">ASLR</a>, and <a href="https://pax.grsecurity.net/docs/noexec.txt">NOEXEC</a></td>
+<td align="left"><a href="../slides/lecture5.pdf"><strong>Low-level Software Security II</strong></a> <br/> Reading: <a href="../papers/eternal-war-in-memory.pdf">Eternal War in Memory</a> by Szekeres et al., <a href="https://pax.grsecurity.net/docs/aslr.txt">ASLR</a>, and <a href="https://pax.grsecurity.net/docs/noexec.txt">NOEXEC</a></td>
 </tr>
 <tr>
 <td align="left">Jan 28</td>
