--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -299,7 +299,7 @@
 </tr>
 <tr>
 <td align="left">Jan 28</td>
-<td align="left"></td>
+<td align="left"><strong>Low-level Software Security III</strong> <br/> Reading: <a href="../papers/shacham:aslr.pdf">On the Effectiveness of Address-Space Randomization</a> by Shacham et al. and <a href="../papers/shacham:rop.pdf">The Geometry of Innocent Flesh on the Bone: Return-into-libc without Function Calls (on the x86)</a> by Shacham</td>
 </tr>
 <tr>
 <td align="left">Jan 30</td>
