--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -299,11 +299,11 @@
 </tr>
 <tr>
 <td align="left">Jan 28</td>
-<td align="left"><strong>Low-level Software Security III</strong> <br/> Reading: <a href="../papers/shacham:aslr.pdf">On the Effectiveness of Address-Space Randomization</a> by Shacham et al. and <a href="../papers/shacham:rop.pdf">The Geometry of Innocent Flesh on the Bone: Return-into-libc without Function Calls (on the x86)</a> by Shacham</td>
+<td align="left"><a href="../slides/lecture6.pdf"><strong>Low-level Software Security III</strong></a> <br/> Reading: <a href="../papers/shacham:aslr.pdf">On the Effectiveness of Address-Space Randomization</a> by Shacham et al., <a href="../papers/shacham:rop.pdf">The Geometry of Innocent Flesh on the Bone: Return-into-libc without Function Calls (on the x86)</a> by Shacham, and <a href="../papers/bittau:brop.pdf">Hacking BLind</a> by Bittau et al.</td>
 </tr>
 <tr>
 <td align="left">Jan 30</td>
-<td align="left"></td>
+<td align="left"><strong>Low-level Software Security IV</strong> <br/> Reading: <a href="../papers/abadi:cfi.pdf">Control-Flow Integrity</a> by Abadi et al., <a href="../papers/carlini:cfb.pdf">Control-Flow Bending: On the Effectiveness of Control-Flow Integrity</a> by Carlini et al., and <a href="../papers/dang:oscar.pdf">Oscar: A Practical Page-Permissions-Based Scheme for Thwarting Dangling Pointers</a> by Dang et al.</td>
 </tr>
 <tr>
 <td align="left">Feb  4</td>
