--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -303,11 +303,11 @@
 </tr>
 <tr>
 <td align="left">Jan 30</td>
-<td align="left"><strong>Low-level Software Security IV</strong> <br/> Reading: <a href="../papers/abadi:cfi.pdf">Control-Flow Integrity</a> by Abadi et al., <a href="../papers/carlini:cfb.pdf">Control-Flow Bending: On the Effectiveness of Control-Flow Integrity</a> by Carlini et al., and <a href="../papers/dang:oscar.pdf">Oscar: A Practical Page-Permissions-Based Scheme for Thwarting Dangling Pointers</a> by Dang et al.</td>
+<td align="left"><a href="../slides/lecture7.pdf"><strong>Low-level Software Security IV</strong></a> <br/> Reading: <a href="../papers/abadi:cfi.pdf">Control-Flow Integrity</a> by Abadi et al., <a href="../papers/carlini:cfb.pdf">Control-Flow Bending: On the Effectiveness of Control-Flow Integrity</a> by Carlini et al. and <a href="../papers/burow:cfi.pdf">Control-Flow Integrity: Precision, Security, and Performance</a> by Burow et al.</td>
 </tr>
 <tr>
 <td align="left">Feb  4</td>
-<td align="left"></td>
+<td align="left"><strong>Memory safety and isolation</strong> <br/> Reading <a href="../papers/dang:oscar.pdf">Oscar: A Practical Page-Permissions-Based Scheme for Thwarting Dangling Pointers</a> by Dang et al., Bringing Memory Safety to WebAssembly (see Piazza), and <a href="../papers/wahbe:sfi.pdf">Efficient Software-Based Fault Isolation</a> by Wahbe et al.</td>
 </tr>
 <tr>
 <td align="left">Feb  6</td>
