--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -319,15 +319,7 @@
 </tr>
 <tr>
 <td align="left">Feb  4</td>
-<td align="left"><strong>Memory safety</strong> <br/> Reading:</td>
-</tr>
-<tr>
-<td align="left"><a href="../papers/softbound.pdf">SoftBound: Highly Compatible and CompleteSpatial Memory Safety for C</a> by Nagarakatte et al.,</td>
-<td align="left"></td>
-</tr>
-<tr>
-<td align="left"><a href="../papers/dang:oscar.pdf">Oscar: A Practical Page-Permissions-Based Scheme for Thwarting Dangling Pointers</a> by Dang et al., and Bringing Memory Safety to WebAssembly by Disselkoen et al.</td>
-<td align="left"></td>
+<td align="left"><strong>Memory safety</strong> <br/> Reading: <a href="../papers/softbound.pdf">SoftBound: Highly Compatible and CompleteSpatial Memory Safety for C</a> by Nagarakatte et al., <a href="../papers/dang:oscar.pdf">Oscar: A Practical Page-Permissions-Based Scheme for Thwarting Dangling Pointers</a> by Dang et al., and Bringing Memory Safety to WebAssembly by Disselkoen et al.</td>
 </tr>
 <tr>
 <td align="left">Feb  6</td>
