--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -327,7 +327,7 @@
 </tr>
 <tr>
 <td align="left">Feb 11</td>
-<td align="left"><strong>Sandboxing and isolation</strong> <br/> Reading: <a href="../papers/wahbe:sfi.pdf">Efficient Software-Based Fault Isolation</a> by Wahbe et al. and <a href="../papers/tal:traps.pdf">Traps and Pitfalls: Practical Problems in System Call Interposition Based Security Tools</a> by Garfinkel</td>
+<td align="left"><strong>Sandboxing and isolation</strong> <br/> Reading: <a href="../papers/wahbe:sfi.pdf">Efficient Software-Based Fault Isolation</a> by Wahbe et al.</td>
 </tr>
 <tr>
 <td align="left">Feb 13</td>
