--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -323,11 +323,15 @@
 </tr>
 <tr>
 <td align="left">Feb  6</td>
-<td align="left"><strong>Least privilege and privilege separation</strong> <br/> Reading: <a href="../papers/ossecurity.pdf">Operating Systems Security</a> by Jaeger</td>
+<td align="left"><a href="../slides/lecture9.pdf"><strong>Least privilege and privilege separation</strong></a> <br/> Reading: <a href="../papers/ossecurity.pdf">Operating Systems Security</a> by Jaeger</td>
 </tr>
 <tr>
 <td align="left">Feb 11</td>
-<td align="left"><strong>Sandboxing and isolation</strong> <br/> Reading: <a href="../papers/wahbe:sfi.pdf">Efficient Software-Based Fault Isolation</a> by Wahbe et al.</td>
+<td align="left"><strong>Isolation</strong> and <strong>short review</strong> <br/> Reading: <a href="../papers/wahbe:sfi.pdf">Efficient Software-Based Fault Isolation</a> by Wahbe et al.</td>
+</tr>
+<tr>
+<td align="left">Feb 12</td>
+<td align="left"><strong>Midterm review</strong></td>
 </tr>
 <tr>
 <td align="left">Feb 13</td>
