--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -327,7 +327,7 @@
 </tr>
 <tr>
 <td align="left">Feb 11</td>
-<td align="left"><strong>Isolation</strong> and <strong>short review</strong> <br/> Reading: <a href="../papers/wahbe:sfi.pdf">Efficient Software-Based Fault Isolation</a> by Wahbe et al.</td>
+<td align="left"><a href="../slides/lecture10.pdf"><strong>Isolation</strong> and <strong>short review</strong></a> <br/> Reading: <a href="../papers/wahbe:sfi.pdf">Efficient Software-Based Fault Isolation</a> by Wahbe et al.</td>
 </tr>
 <tr>
 <td align="left">Feb 12</td>
