--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -343,7 +343,7 @@
 </tr>
 <tr>
 <td align="left">Feb 20</td>
-<td align="left"></td>
+<td align="left"><strong>Page tables, VMs, and side channels</strong> <br/> Reading: <a href="../papers/brumley:timing.pdf">Remote Timing Attacks are Practical</a> by Brumley and Boneh</td>
 </tr>
 <tr>
 <td align="left">Feb 25</td>
