--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -359,7 +359,7 @@
 </tr>
 <tr>
 <td align="left">Feb 25</td>
-<td align="left"><a href="../slides/lecture12.pdf"><strong>Web security model and CSRF</strong></a> <br/> Reading: <a href="https://www.owasp.org/index.php/Cross-Site_Request_Forgery_%28CSRF%29">CSRF</a> and <a href="https://code.google.com/archive/p/browsersec/wikis/Part2.wiki#Same-origin_policy">Same Origin Policy</a></td>
+<td align="left"><a href="../slides/lecture12.pdf"><strong>Web security model and CSRF</strong></a> <br/> Reading: <a href="https://www.owasp.org/index.php/Cross-Site_Request_Forgery_%28CSRF%29">CSRF</a> and <a href="https://code.google.com/archive/p/browsersec/wikis/Part2.wiki#Same-origin_policy">Same Origin Policy</a> <br/> Lecture code: <a href="https://github.com/PLSysSec/cse127-toy-webapp">CSRF simple app</a></td>
 </tr>
 <tr>
 <td align="left">Feb 27</td>
