--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -403,19 +403,19 @@
 </tr>
 <tr>
 <td align="left">Mar  4</td>
-<td align="left"></td>
+<td align="left"><a href="../slides/lecture14.pdf"><strong>Modern client-side security mechanisms</strong></a> <br/> Reading <a href="https://www.html5rocks.com/en/tutorials/security/content-security-policy/">CSP</a>, <a href="https://www.html5rocks.com/en/tutorials/security/sandboxed-iframes/">iframe sandbox</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS">CORS</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/Security/Subresource_Integrity">SRI</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/Security/Mixed_content">Mixed content</a>, <a href="../papers/rydstedt:busting.pdf">Busting Frame Busting:a Study of Clickjacking Vulnerabilities on Popular Site</a> by Rydstedt et al.</td>
 </tr>
 <tr>
 <td align="left">Mar  6</td>
-<td align="left"></td>
+<td align="left"><strong>Intro to crypto</strong></td>
 </tr>
 <tr>
 <td align="left">Mar 11</td>
-<td align="left"></td>
+<td align="left"><strong>HTTPS and certificate transparency</strong></td>
 </tr>
 <tr>
 <td align="left">Mar 13</td>
-<td align="left"><strong>Advanced topics in security</strong></td>
+<td align="left"><strong>Network security</strong></td>
 </tr>
 <tr>
 <td align="left">Mar 20</td>
