--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -407,11 +407,11 @@
 </tr>
 <tr>
 <td align="left">Mar  6</td>
-<td align="left"><strong>Intro to crypto</strong></td>
+<td align="left"><strong>Intro to cryptography</strong> <br/> Reading: <a href="https://www.cl.cam.ac.uk/~rja14/Papers/SEv2-c05.pdf">Security Engineering, Ch 5</a>, <a href="http://breachattack.com/resources/BREACH%20-%20SSL,%20gone%20in%2030%20seconds.pdf">BREACH</a></td>
 </tr>
 <tr>
 <td align="left">Mar 11</td>
-<td align="left"><strong>HTTPS and certificate transparency</strong></td>
+<td align="left"><strong>PKI, HTTPS, and CT</strong></td>
 </tr>
 <tr>
 <td align="left">Mar 13</td>
