--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -427,11 +427,11 @@
 </tr>
 <tr>
 <td align="left">Mar 13</td>
-<td align="left"><strong>Network security</strong></td>
+<td align="left"><strong>Network security</strong> <br/> Reading: <a href="../papers/bellovin:ip.pdf">A Look Back at Security Problems in the TCP/IP Protocol Suite</a> by Bellovin, <a href="http://unixwiz.net/techtips/iguide-kaminsky-dns-vuln.html">An Illustrated Guide to the Kaminsky DNS Vulnerability</a> by Friedl</td>
 </tr>
 <tr>
 <td align="left">Mar 20</td>
-<td align="left"><strong>Final exam 7-9:59PM</strong></td>
+<td align="left"><strong>Final exam 7-10PM</strong></td>
 </tr>
 </tbody>
 </table>
