--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -423,7 +423,7 @@
 </tr>
 <tr>
 <td align="left">Mar 11</td>
-<td align="left"><strong>PKI, HTTPS, and CT</strong> <br/> Reading: <a href="../papers/ellison:ten-risks.pdf">Ten Risks of PKI</a> by Ellison and Schneier, <a href="../papers/topalovic:towards.pdf">Towards Short-Lived Certificates</a> by Topalovic et al., <a href="https://tls13.ulfheim.net/">The New Illustrated TLS Connection</a>, <a href="https://crt.sh">CT log searches</a>, and <a href="../papers/crtlite.pdf">CRLite: a Scalable System for Pushing all TLS Revocations to All Browsers</a> by Larisch et al.</td>
+<td align="left"><a href="../slides/lecture16.pdf"><strong>PKI, HTTPS, and CT</strong></a> <br/> Reading: <a href="../papers/ellison:ten-risks.pdf">Ten Risks of PKI</a> by Ellison and Schneier, <a href="../papers/topalovic:towards.pdf">Towards Short-Lived Certificates</a> by Topalovic et al., <a href="https://tls13.ulfheim.net/">The New Illustrated TLS Connection</a>, <a href="https://crt.sh">CT log searches</a>, and <a href="../papers/crtlite.pdf">CRLite: a Scalable System for Pushing all TLS Revocations to All Browsers</a> by Larisch et al.</td>
 </tr>
 <tr>
 <td align="left">Mar 13</td>
