--- a/site/syllabus/index.html
+++ b/site/syllabus/index.html
@@ -431,7 +431,7 @@
 </tr>
 <tr>
 <td align="left">Mar 20</td>
-<td align="left"><strong>Final exam 7-10PM</strong></td>
+<td align="left"><strong>Final exam in Solis 104 @ 7-10PM</strong></td>
 </tr>
 </tbody>
 </table>
