--- a/cse127-fall19/site/syllabus/index.html
+++ b/cse127-fall19/site/syllabus/index.html
@@ -283,11 +283,11 @@
 </tr>
 <tr>
 <td align="left">Oct  2</td>
-<td align="left">Buffer Overflows <br/> Reading: Aleph One's <a href="http://phrack.org/issues/49/14.html#article">Smashing the Stack for Fun and Profit</a> <br/> Optional reading: 0x300-0x320 from Hacking. 0x200-0x270 if you don't have a strong C background.</td>
+<td align="left"><a href="../slides/2-bufferoverflows.pdf">Buffer Overflows</a> <br/> Reading: Aleph One's <a href="http://phrack.org/issues/49/14.html#article">Smashing the Stack for Fun and Profit</a> <br/> Optional reading: 0x300-0x320 from Hacking. 0x200-0x270 if you don't have a strong C background.</td>
 </tr>
 <tr>
 <td align="left">Oct  7</td>
-<td align="left">ASLR/W^X/ROP</td>
+<td align="left">ASLR/W^X/ROP <br/> Reading: <a href="https://www.nebelwelt.net/publications/files/13Oakland.pdf">Eternal War in Memory</a> by Szekeres et al., <a href="https://pax.grsecurity.net/docs/aslr.txt">ASLR</a>, and <a href="https://pax.grsecurity.net/docs/noexec.txt">NOEXEC</a></td>
 </tr>
 <tr>
 <td align="left"></td>
