--- a/cse127-fall19/site/index.html
+++ b/cse127-fall19/site/index.html
@@ -456,14 +456,14 @@ probably enough and covers some x86 assembly too.</p>
 <p><strong>Lectures:</strong></p>
 <ul>
 <li><strong>(A) Nadia Heninger:</strong> Mondays and Wednesdays, 2pm - 3:20pm in EBU3B 4140</li>
-<li><strong>(B) Deian Sefan:</strong> Mondays and Wednesdays, 5pm - 6:20pm in CENTR 214</li>
+<li><strong>(B) Deian Stefan:</strong> Mondays and Wednesdays, 5pm - 6:20pm in CENTR 214</li>
 </ul>
 </li>
 <li>
 <p><strong>Section:</strong></p>
 <ul>
 <li><strong>(A) Nadia Heninger:</strong> Fridays, 4pm-5pm in CENTR 113</li>
-<li><strong>(B) Deian Sefan:</strong> Fridays, 5pm-6pm in CENTR 113</li>
+<li><strong>(B) Deian Stefan:</strong> Fridays, 5pm-6pm in CENTR 113</li>
 </ul>
 </li>
 <li>
