--- a/cse127-fall19/site/pa/pa1/index.html
+++ b/cse127-fall19/site/pa/pa1/index.html
@@ -515,8 +515,8 @@ directory to begin working on it.</p>
 <p>Inside the <code>gdb</code> directory, you'll find <code>fib.c</code>, a C program demonstrating the Fibonacci sequence;
 a <code>Makefile</code>; and <code>hw1.txt</code>, in which you'll record your responses to the questions below. The
 first step is to compile <code>fib</code> by running <code>make</code> on the command line.</p>
-<p>To run the <code>fib</code> executable in GDB, run <code>gdb -e fib</code>. Use the <code>-s</code> option to load a symbol file. I
-recommend the following workflow in GDB:</p>
+<p>To run the <code>fib</code> executable in GDB, run <code>gdb fib</code>.
+I recommend the following workflow in GDB:</p>
 <ol>
 <li><strong>Starting.</strong> Set breakpoints that you can later use for analysis:<ul>
 <li><code>b foo</code> &mdash; break at function <code>foo</code></li>
