--- a/cse127-fall19/site/syllabus/index.html
+++ b/cse127-fall19/site/syllabus/index.html
@@ -287,7 +287,7 @@
 </tr>
 <tr>
 <td align="left">Oct  7</td>
-<td align="left"><a href="slides/3-lowlevelmitigations.pdf">Buffer overflow defenses (Stack canaries/W^X/ASLR)</a> <br/> Reading: <a href="https://www.nebelwelt.net/publications/files/13Oakland.pdf">Eternal War in Memory</a> by Szekeres et al., <a href="https://pax.grsecurity.net/docs/aslr.txt">ASLR</a>, and <a href="https://pax.grsecurity.net/docs/noexec.txt">NOEXEC</a></td>
+<td align="left"><a href="../slides/3-lowlevelmitigations.pdf">Buffer overflow defenses (Stack canaries/W^X/ASLR)</a> <br/> Reading: <a href="https://www.nebelwelt.net/publications/files/13Oakland.pdf">Eternal War in Memory</a> by Szekeres et al., <a href="https://pax.grsecurity.net/docs/aslr.txt">ASLR</a>, and <a href="https://pax.grsecurity.net/docs/noexec.txt">NOEXEC</a></td>
 </tr>
 <tr>
 <td align="left"></td>
