--- a/cse127-fall19/site/syllabus/index.html
+++ b/cse127-fall19/site/syllabus/index.html
@@ -331,15 +331,15 @@
 </tr>
 <tr>
 <td align="left">Oct 16</td>
-<td align="left"><a href="slides/6-malware.pdf">Malware</a></td>
+<td align="left"><a href="../slides/6-malware.pdf">Malware</a></td>
 </tr>
 <tr>
 <td align="left">Oct 21</td>
-<td align="left">Web Security Model</td>
+<td align="left"><a href="../slides/7-webmodel.pdf">Web Security Model</a></td>
 </tr>
 <tr>
 <td align="left">Oct 23</td>
-<td align="left">Web Attacks (CSRF/XSS/SQLi)</td>
+<td align="left"><a href="../slides/8-webattacks.pdf">Web Attacks</a></td>
 </tr>
 <tr>
 <td align="left"></td>
