--- a/cse127-fall19/site/syllabus/index.html
+++ b/cse127-fall19/site/syllabus/index.html
@@ -335,11 +335,11 @@
 </tr>
 <tr>
 <td align="left">Oct 21</td>
-<td align="left"><a href="../slides/7-webmodel.pdf">Web Security Model</a></td>
+<td align="left"><a href="../slides/7-webmodel.pdf">Web security model</a></td>
 </tr>
 <tr>
 <td align="left">Oct 23</td>
-<td align="left"><a href="../slides/8-webattacks.pdf">Web Attacks</a></td>
+<td align="left"><a href="../slides/8-webattacks.pdf">Web attacks and defenses</a></td>
 </tr>
 <tr>
 <td align="left"></td>
@@ -347,7 +347,7 @@
 </tr>
 <tr>
 <td align="left">Oct 28</td>
-<td align="left">Web Defenses</td>
+<td align="left"><a href="../slides/9-webdefenses.pdf">Modern client-side web defenses</a></td>
 </tr>
 <tr>
 <td align="left">Oct 30</td>
