--- a/cse127-fall19/site/syllabus/index.html
+++ b/cse127-fall19/site/syllabus/index.html
@@ -371,7 +371,7 @@
 </tr>
 <tr>
 <td align="left">Nov  6</td>
-<td align="left">Network attacks]</td>
+<td align="left"><a href="../slides/11-networkattacks.pdf">Network attacks</a></td>
 </tr>
 <tr>
 <td align="left"></td>
