--- a/cse127-fall19/site/syllabus/index.html
+++ b/cse127-fall19/site/syllabus/index.html
@@ -391,11 +391,11 @@
 </tr>
 <tr>
 <td align="left">Nov 11</td>
-<td align="left">Veterans Day - no class</td>
+<td align="left">Veterans day (no class)</td>
 </tr>
 <tr>
 <td align="left">Nov 13</td>
-<td align="left">Network Defenses</td>
+<td align="left"><a href="../slides/12-networkdefenses.pdf">Network defenses</a></td>
 </tr>
 <tr>
 <td align="left">Nov 18</td>
