--- a/cse127-fall19/site/syllabus/index.html
+++ b/cse127-fall19/site/syllabus/index.html
@@ -399,7 +399,7 @@
 </tr>
 <tr>
 <td align="left">Nov 18</td>
-<td align="left">Symmetric Crypto</td>
+<td align="left"><a href="../slides/13-symmetriccrypto.pdf">Symmetric-key crypto</a></td>
 </tr>
 <tr>
 <td align="left">Nov 20</td>
