--- a/cse127-fall19/site/syllabus/index.html
+++ b/cse127-fall19/site/syllabus/index.html
@@ -408,11 +408,11 @@
 </tr>
 <tr>
 <td align="left">Nov 25</td>
-<td align="left">TLS/PKI/CT</td>
+<td align="left"><a href="../slides/15-tls.pdf">TLS and PKI</a></td>
 </tr>
 <tr>
 <td align="left">Nov 27</td>
-<td align="left">TLS/PKI/CT</td>
+<td align="left">Advanced Topics: Breaking Crypto + Language-based Crypto</td>
 </tr>
 <tr>
 <td align="left"></td>
