--- a/cse127-fall19/site/syllabus/index.html
+++ b/cse127-fall19/site/syllabus/index.html
@@ -432,7 +432,7 @@
 </tr>
 <tr>
 <td align="left">Dec  2</td>
-<td align="left">Privacy/Anonymity</td>
+<td align="left"><a href="../slides/17-privacy.pdf">Privacy/Anonymity</a></td>
 </tr>
 <tr>
 <td align="left">Dec  4</td>
