--- a/cse127-fall19/site/syllabus/index.html
+++ b/cse127-fall19/site/syllabus/index.html
@@ -436,7 +436,7 @@
 </tr>
 <tr>
 <td align="left">Dec  4</td>
-<td align="left">Ethics/Law/Policy</td>
+<td align="left"><a href="../slides/18-policy.pdf">Ethics/Law/Policy</a></td>
 </tr>
 </tbody>
 </table>
