--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -324,7 +324,7 @@
 </tr>
 <tr>
 <td align="left">Jan 13</td>
-<td align="left">Buffer overflow defenses (Stack canaries/W^X/ASLR) <br/> Reading: <a href="https://www.nebelwelt.net/publications/files/13Oakland.pdf">Eternal War in Memory</a> by Szekeres et al., <a href="https://pax.grsecurity.net/docs/aslr.txt">ASLR</a>, and <a href="https://pax.grsecurity.net/docs/noexec.txt">NOEXEC</a></td>
+<td align="left"><a href="../slides/3-lowlevelmitigations.pdf">Buffer overflow defenses</a> (Stack canaries/W^X/ASLR) <br/> Reading: <a href="https://www.nebelwelt.net/publications/files/13Oakland.pdf">Eternal War in Memory</a> by Szekeres et al., <a href="https://pax.grsecurity.net/docs/aslr.txt">ASLR</a>, and <a href="https://pax.grsecurity.net/docs/noexec.txt">NOEXEC</a></td>
 </tr>
 <tr>
 <td align="left"></td>
@@ -332,7 +332,7 @@
 </tr>
 <tr>
 <td align="left">Jan 15</td>
-<td align="left">More memory safety attacks and defenses</td>
+<td align="left">More memory safety attacks and defenses <br/> Reading: <a href="../papers/shacham:rop.pdf">The Geometry of Innocent Flesh on the Bone:Return-into-libc without Function Calls (on the x86)</a> by Shacham and <a href="abadi:cfi.pdf">Control-Flow Integrity</a> by Abadi et al.</td>
 </tr>
 <tr>
 <td align="left">Jan 20</td>
