--- a/contact/index.html
+++ b/contact/index.html
@@ -399,7 +399,7 @@ post a private question.</p>
 <hr />
 <ul>
 <li><strong>Name:</strong> Riley Hadden</li>
-<li><strong>Office Hours:</strong> Thursday 3:30-4:30pm in B275 EBU3B</li>
+<li><strong>Office Hours:</strong> Thursday 8:00-9:00am in B275 EBU3B</li>
 </ul>
 <hr />
 <ul>
