move things around

--- a/cse127-winter20/site/syllabus/index.html
+++ b/cse127-winter20/site/syllabus/index.html
@@ -340,6 +340,10 @@
 </tr>
 <tr>
 <td align="left">Jan 22</td>
+<td align="left">Review and wrap up low-level attacks and defenses (online)</td>
+</tr>
+<tr>
+<td align="left">Jan 27</td>
 <td align="left">OS Security/Isolation</td>
 </tr>
 <tr>
@@ -347,11 +351,11 @@
 <td align="left"><strong>Assignment 3: Side channels</strong></td>
 </tr>
 <tr>
-<td align="left">Jan 27</td>
+<td align="left">Jan 29</td>
 <td align="left">Web security model</td>
 </tr>
 <tr>
-<td align="left">Jan 29</td>
+<td align="left">Feb  3</td>
 <td align="left">Web attacks and defenses</td>
 </tr>
 <tr>
@@ -359,12 +363,8 @@
 <td align="left"><strong>Assignment 4: Web</strong></td>
 </tr>
 <tr>
-<td align="left">Feb  3</td>
-<td align="left">Modern client-side web defenses</td>
-</tr>
-<tr>
 <td align="left">Feb  5</td>
-<td align="left">Network intro</td>
+<td align="left">Modern client-side web defenses</td>
 </tr>
 <tr>
 <td align="left">Feb 10</td>
@@ -372,11 +372,7 @@
 </tr>
 <tr>
 <td align="left">Feb 12</td>
-<td align="left">Network attacks</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left"><strong>Assignment 5: Networks</strong></td>
+<td align="left">Network intro</td>
 </tr>
 <tr>
 <td align="left">Feb 17</td>
@@ -384,23 +380,27 @@
 </tr>
 <tr>
 <td align="left">Feb 19</td>
-<td align="left">Network defenses</td>
+<td align="left">Network attacks</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left"><strong>Assignment 5: Networks</strong></td>
 </tr>
 <tr>
 <td align="left">Feb 24</td>
-<td align="left">Symmetric-key crypto</td>
+<td align="left">Network defenses</td>
 </tr>
 <tr>
 <td align="left">Feb 26</td>
-<td align="left">Public-key crypto</td>
+<td align="left">Symmetric-key crypto</td>
 </tr>
 <tr>
 <td align="left">Mar  2</td>
-<td align="left">TLS and PKI</td>
+<td align="left">Public-key crypto</td>
 </tr>
 <tr>
 <td align="left">Mar  5</td>
-<td align="left">Side channels</td>
+<td align="left">TLS and PKI</td>
 </tr>
 <tr>
 <td align="left"></td>
@@ -408,11 +408,11 @@
 </tr>
 <tr>
 <td align="left">Mar  9</td>
-<td align="left">Privacy/Anonymity</td>
+<td align="left">Side channels</td>
 </tr>
 <tr>
 <td align="left">Mar 11</td>
-<td align="left">Guest lecture</td>
+<td align="left">Privacy/Anonymity</td>
 </tr>
 </tbody>
 </table>
