--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -332,7 +332,7 @@
 </tr>
 <tr>
 <td align="left">Jan 15</td>
-<td align="left">More memory safety attacks and defenses <br/> Reading: <a href="../papers/shacham:rop.pdf">The Geometry of Innocent Flesh on the Bone:Return-into-libc without Function Calls (on the x86)</a> by Shacham and <a href="../papers/abadi:cfi.pdf">Control-Flow Integrity</a> by Abadi et al.</td>
+<td align="left"><a href="../slides/4-ropcfimisc.pdf">More memory safety attacks and defenses</a> <br/> Reading: <a href="../papers/shacham:rop.pdf">The Geometry of Innocent Flesh on the Bone:Return-into-libc without Function Calls (on the x86)</a> by Shacham and <a href="../papers/abadi:cfi.pdf">Control-Flow Integrity</a> by Abadi et al.</td>
 </tr>
 <tr>
 <td align="left">Jan 20</td>
@@ -340,7 +340,7 @@
 </tr>
 <tr>
 <td align="left">Jan 22</td>
-<td align="left">Review and wrap up low-level attacks and defenses (online)</td>
+<td align="left">More memory safety attacks and defenses (cont)</td>
 </tr>
 <tr>
 <td align="left">Jan 27</td>
