--- a/cse127-winter20/site/syllabus/index.html
+++ b/cse127-winter20/site/syllabus/index.html
@@ -356,7 +356,7 @@
 </tr>
 <tr>
 <td align="left">Jan 27</td>
-<td align="left">OS Security/Isolation</td>
+<td align="left"><a href="../slides/5-isolation.pdf">Isolation and side channels</a> <br/> Reading: <a href="https://link.springer.com/content/pdf/10.1007/s00145-009-9049-y.pdf">Efficient Cache Attacks on AES, and Countermeasures</a> by Tromer, Osvik, and Shamir.</td>
 </tr>
 <tr>
 <td align="left"></td>
