--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -380,7 +380,7 @@
 </tr>
 <tr>
 <td align="left">Feb  3</td>
-<td align="left">Web attacks and defenses</td>
+<td align="left"><a href="../slides/7-webattacks.pdf">Web attacks and defenses</a></td>
 </tr>
 <tr>
 <td align="left"></td>
