--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -388,7 +388,7 @@
 </tr>
 <tr>
 <td align="left">Feb  5</td>
-<td align="left">Modern client-side web defenses</td>
+<td align="left"><a href="../slides/8-webdefenses.pdf">Modern client-side web defenses</a></td>
 </tr>
 <tr>
 <td align="left">Feb 10</td>
