--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -416,7 +416,7 @@
 </tr>
 <tr>
 <td align="left">Feb 19</td>
-<td align="left">Network intro</td>
+<td align="left"><a href="../slides/9-networkintro.pdf">Network intro</a></td>
 </tr>
 <tr>
 <td align="left"></td>
