--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -436,7 +436,7 @@
 </tr>
 <tr>
 <td align="left">Feb 24</td>
-<td align="left">Network attacks</td>
+<td align="left"><a href="../slides/10-networkattacks.pdf">Network attacks</a></td>
 </tr>
 <tr>
 <td align="left">Feb 26</td>
