--- a/cse127-winter20/site/syllabus/index.html
+++ b/cse127-winter20/site/syllabus/index.html
@@ -440,7 +440,7 @@
 </tr>
 <tr>
 <td align="left">Feb 26</td>
-<td align="left">Network defenses</td>
+<td align="left"><a href="../slides/11-networkdefenses.pdf">Network defenses</a></td>
 </tr>
 <tr>
 <td align="left">Mar  2</td>
