--- a/cse127-winter20/site/syllabus/index.html
+++ b/cse127-winter20/site/syllabus/index.html
@@ -444,7 +444,7 @@
 </tr>
 <tr>
 <td align="left">Mar  2</td>
-<td align="left">Symmetric-key crypto</td>
+<td align="left"><a href="../slides/12-symmetriccrypto.pdf">Symmetric-key crypto</a></td>
 </tr>
 <tr>
 <td align="left">Mar  5</td>
