--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -448,7 +448,7 @@
 </tr>
 <tr>
 <td align="left">Mar  5</td>
-<td align="left">Public-key crypto (TLS and PKI)</td>
+<td align="left"><a href="../slides/13-pubkeycrypto.pdf">Public-key crypto</a></td>
 </tr>
 <tr>
 <td align="left"></td>
@@ -456,7 +456,7 @@
 </tr>
 <tr>
 <td align="left">Mar  9</td>
-<td align="left">Side channels</td>
+<td align="left">TLS/PKI/Side channels</td>
 </tr>
 <tr>
 <td align="left">Mar 11</td>
