--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -468,7 +468,7 @@
 </tr>
 <tr>
 <td align="left">Mar  9</td>
-<td align="left">TLS/PKI/Side channels</td>
+<td align="left"><a href="../slides/14-tls.pdf">TLS/PKI</a></td>
 </tr>
 <tr>
 <td align="left">Mar 11</td>
