--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -472,7 +472,7 @@
 </tr>
 <tr>
 <td align="left">Mar 11</td>
-<td align="left">Privacy/Anonymity</td>
+<td align="left"><a href="../slides/15-privacy.pdf">Privacy/Anonymity/Ethics/Policy</a></td>
 </tr>
 </tbody>
 </table>
