--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -35,18 +35,18 @@ Staff:
 : **Teaching Assistants**: Sunjay Cauligi, Evan Johnson, Sam Liu, and Kevin Yu
 
 Section:
-: Monday, 11:00--11:50 AM PDT
+: Monday, 11:00-11:50 AM PDT
 
 Office hours:
 : **Evan**: Monday, 7:00-8:00 PM PDT
 
 : **Sam**: Tuesday, 1:00-2:00 PM PDT
 
-: **Kevin**: Wednesday, 10:00--11 AM PDT
+: **Kevin**: Wednesday, 10:00-11 AM PDT
 
 : **Sunjay**: Thursday, 7:00-8:00 PM PDT
 
-: **Deian**: Friday, 9:00--10:00 AM PDT
+: **Deian**: Friday, 9:00-10:00 AM PDT
 
 Web tools:
 : [Piazza](**https://piazza.com/ucsd/fall2020/cse127**) for all communication.
