--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Office hours:
 : **Deian**: Friday, 9:00-10:00 AM PDT
 
 Web tools:
-: [Piazza](**https://piazza.com/ucsd/fall2020/cse127**) for all communication.
+: [Piazza](https://piazza.com/ucsd/fall2020/cse127) for all communication.
   ([Configure your piazza privacy settings](https://piazza.com/myprofile).)
 
 : [Gradescope](**https://www.gradescope.com/courses/195955**) (entry code: KY5K8Z) for assignments and exam.
