--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Web tools:
 : [Piazza](https://piazza.com/ucsd/fall2020/cse127) for all communication.
   ([Configure your piazza privacy settings](https://piazza.com/myprofile).)
 
-: [Gradescope](**https://www.gradescope.com/courses/195955**) (entry code: KY5K8Z) for assignments and exam.
+: [Gradescope](https://www.gradescope.com/courses/195955) (entry code: KY5K8Z) for assignments and exam.
 
 : [Zoom (via Canvas)](https://canvas.ucsd.edu/courses/18853) for lecture, section, and all office hours.
 
