--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ Mon Oct  5 2020: Introduction
   - *Watch*: [USENIX Security 2018 Keynote](https://www.usenix.org/conference/usenixsecurity18/presentation/mickens) by James Mickens
 
 Tue Oct  6 2020: PA1: GDB + x86
+ - [Writeup](pa/pa1.md)
 
 Wed Oct  7 2020: Buffer overflow attacks
   - *Read*: [Smashing the Stack for Fun and Profit](http://phrack.org/issues/49/14.html#article) by Aleph One
