--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@ Mon Oct  5 2020: Introduction
   - *Read*: [This World of Ours](https://www.usenix.org/system/files/1401_08-12_mickens.pdf) by James Mickens
   - *Watch*: [USENIX Security 2018 Keynote](https://www.usenix.org/conference/usenixsecurity18/presentation/mickens) by James Mickens
 
-Tue Oct  6 2020: PA1: GDB + x86
- - [Writeup](pa/pa1.md)
+Tue Oct  6 2020: [PA1: GDB + x86](pa/pa1.html)
+ - Early turn-in: Monday, October 12, 2020 by 23:59:59 PDT (10% bonus)
+ - Hard deadline: Wednesday, October 14, 2020 by 23:59:59 PDT
 
 Wed Oct  7 2020: Buffer overflow attacks
   - *Read*: [Smashing the Stack for Fun and Profit](http://phrack.org/issues/49/14.html#article) by Aleph One
